--- a/style.css
+++ b/style.css
@@ -101,8 +101,7 @@ a{
 
     .left-column{
         padding:0;
-        pa
-        dding-top: 5rem;
+        padding-top: 5rem;
     }
     .right-column{
         padding: 0;
